# bp3

./: CMakeLists.txt  NOTES  SConscript  SConstruct  buildutils.py  run-cc-test
cmake/: CMakeLists.txt  FindPythonLibsNew.cmake
include/bp3/: ArgsFromPython.hpp  Callable.hpp  Debug.hpp  ExceptionAccess.hpp  FromPython.hpp  FromPythonBase.hpp  FromPythonFuncs.hpp  Module.hpp  Overload.hpp  PyPtr.hpp  Registration.hpp  Registry.hpp  ToPython.hpp  TypeInfo.hpp  WrapperError.hpp  builtin.hpp  callable.hpp  context.hpp  keywords.hpp  library.hpp  meta.hpp  module.hpp  py_ptr.hpp  testutils.hpp  type_id.hpp
include/bp3/builtin/: exceptions.hpp  exceptions.hpp.py  numbers.hpp  object.hpp  sequence.hpp  str.hpp
include/bp3/callables/: ArgDef.hpp  ArgsFromPython.hpp  Callable.hpp  Overload.hpp
include/bp3/conversion/: args_from_python.hpp  from_python.hpp  from_python_base.hpp  from_python_funcs.hpp  registration.hpp
include/bp3/utils/: Any.hpp  any.hpp
lib/: CMakeLists.txt
python/bp3/: CMakeLists.txt  __init__.py  _bp3.cpp  exceptions.cpp  numeric.cpp  parser.cpp
python/bp3/std/: CMakeLists.txt  __init__.py  _std.cpp  exceptions.cpp
scratch/: example.cc  parser-practice.cpp  run.py  typeid.cpp
src/: Callable.cpp  Debug.cpp  ExceptionAccess.cpp  FromPythonBase.cpp  Module.cpp  Overload.cpp  Registration.cpp  Registry.cpp  ToPython.cpp  TypeInfo.cpp  WrapperError.cpp  callable.cpp  context.cpp  keywords.cpp  module.cpp
src/builtin/: exceptions.cpp  exceptions.cpp.py  numbers.cpp  object.cpp  sequence.cpp  str.cpp
src/callables/: ArgDef.cpp  Callable.cpp  Overload.cpp
src/conversion/: from_python_base.cpp  registration.cpp
tests/: CMakeLists.txt  callables.cpp  callables.py  from_python.cpp  from_python.py  from_python_test.py  keywords.cpp  module.py
